Edited code to work for Java 11